Thu Mar 10 07:31:51 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
          Include config-posix.h on non-NPTL platforms as well.

        * ace/config-linux.h:
          Compile fixes for single thread build.

Wed Mar  9 19:14:01 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/OS.h: Re-added OS.h due to popular demand. It's been slimmed down
          from its pre-ACE 6 days, now including primarily the OS_NS_*.h files
          which can be disabled by setting the preprocessor macro
          DO_NOT_INCLUDE_OS_H before including OS.h.
          This file is here to maintain backwards build compatibility with
          older ACE versions. Using it will slow your compile time over
          simply including the requisite OS_NS_*.h file(s).

        * bin/fuzz.pl: Added a new test check_for_include_OS_h to be sure no
          source within ACE includes ace/OS.h.

        * tests/OS_Test.cpp: Added #include "ace/OS.h" to be sure that it
          at least compiles.

        * NEWS: Note that OS.h is back.

Wed Mar  9 16:22:26 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/rules.local.GNU:

          Removed "-e config.h" from the depgen.pl invocation, we do want
          dependencies included from config.h to be considered.

Wed Mar  9 10:38:39 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/Service_Object.cpp:
          Fixed incorrect arguments for the provided format.

        * ace/Process.h:
          Reverted my change from 'Mon Mar  7 16:14:33 UTC 2011'. GCC cannot
          check formats in wide strings.

Tue Mar  8 15:36:34 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-linux.h:
          Put back accidentally removed MT_SAFE define.

Tue Mar  8 10:31:41 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/config-macros.h:
          Fixed compilation errors from my addition of
          ACE_GCC_FORMAT_ATTRIBUTE.
